--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   },
   "dependencies": {
     "@types/react": "~18.2.14",
+    "effector": "^22.8.6",
+    "effector-react": "^22.5.3",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-svg": "^13.13.0",
+    "styled-components": "^6.0.7",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/plugin-proposal-class-properties": "^7.18.6"
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "react-native-svg-transformer": "^1.1.0"
   },
   "private": true
 }
